# bincheck

./: .gitignore  Cargo.toml  README.md  action.yml
.github/workflows/: ci.yml  release.yml
docs/: verified-binaries.md
scripts/: verify-external.sh
src/: banned.rs  check.rs  elf.rs  lib.rs  libc_flavor.rs  macho.rs  main.rs  output.rs  pe.rs
tests/: banned_function_detection.rs  strict_exit_code.rs
tests/fixtures/banned/: README.md  gen.sh
