[package]
name = "bincheck"
version = "0.1.1"
edition = "2024"
description = "Fast binary security property checker for ELF, PE, and Mach-O files"
license = "Apache-2.0"
repository = "https://github.com/kazu11max17/bincheck"
keywords = ["binary", "security", "elf", "pe", "macho", "hardening"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
comfy-table = "7.2.2"
goblin = "0.10.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
